--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">Tesina</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
     <string name="dialog_camera_success">Camera found.</string>
-    <string name="dialog_camera_sucess_title">Success</string>
-    <string name="dialog_camera_fail">Camera not found.</string>
-    <string name="dialog_camera_fail_title">Error</string>
+    <string name="dialog_camera_success_title">Success</string>
+    <string name="dialog_camera_fail">Pressing Ok you will continue using a code instead of the QR Code. Pressing Cancel the application will close.</string>
+    <string name="dialog_camera_fail_title">Error: camera not found.</string>
+    <string name="scan">Scan</string>
+    <string name="codeTitle">How do i get a code?</string>
+    <string name="codeInstructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
 </resources>
