Get XML, parsing XML ed aggiunta nella GridView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tesina</string>
+    <string name="app_name">ezMenu</string>
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
